# Wheeled-bipedal-robot-simulation

./: .gitignore  CLAUDE.md  MUJOCO_LOG.TXT  README.md  agent.md  pyproject.toml  requirements.txt
.claude/agents/: CheckpointReviewAgent.agent.md  ConfigTuningAgent.agent.md  MultiSeedCompareAgent.agent.md  PaperSyncAgent.agent.md  TrainingMonitorAgent.agent.md
.github/workflows/: ci.yml
Article/: main.aux  main.tex  refs.bib
assets/robot/: wheeled_biped.xml  wheeled_biped_real.xml
assets/robot-urdf/: CMakeLists.txt  package.xml
configs/: baseline_lqr.yaml  curriculum.yaml  robot.yaml
configs/training/: balance.yaml  balance_robust.yaml  rough_terrain.yaml  stair_climbing.yaml  stand_up.yaml  walking.yaml  wheeled_locomotion.yaml
docs/: baseline_workflow.md
outputs/logs/: balance_seed42_metrics.jsonl
outputs/telemetry/: interactive_20260313_133759.csv  interactive_20260324_081333.csv  interactive_20260324_143342.csv  (+14 more)
paper/: main.aux  main.tex  refs.bib
scripts/: compare_baseline.py  convert_urdf.py  diagnose_legs.py  eval_balance.py  evaluate.py  export_results.py  joint_test.py  train.py  validate_checkpoint.py  validate_model.py  verify_model.py  visualize.py
tests/: test_baseline.py  test_benchmark.py  test_curriculum.py  test_env.py  test_eval_balance.py  test_latex_table.py  test_lqr_controller.py  test_model.py  test_noise_and_dr.py  test_ppo_trainer.py  test_rewards.py  test_sim_helpers.py  test_smoke_train.py  test_standing_quality.py  test_unified_controller.py  test_validate_checkpoint.py
wheeled_biped/: __init__.py
(+170 files in other folders)
